fixed class for overflow for html and body

--- a/css/test.css
+++ b/css/test.css
@@ -241,7 +241,12 @@ transform: rotate(-45deg);*/
   height: initial;
 }
 
-.navigation-is-open html {
+html.navigation-is-open  {
+  overflow: hidden;
+  -webkit-overflow: hidden;
+}
+
+.navigation-is-open body {
   overflow: hidden;
   -webkit-overflow: hidden;
 }
@@ -252,4 +257,8 @@ transform: rotate(-45deg);*/
 
 .nav__list-item:first-of-type {
   margin: 0 0 30px 0;
+}
+
+.nav {
+  padding: 4.5em 1.5em 6.875em 1.5em;
 }
